# competitor-monitor-mcp

./: .gitignore  Extensions · JSON  Launch · JSON  README.md  mcpize.yaml  pyproject.toml  requirements.txt  server.py
tests/: test_server.py
