[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "competitor-monitor-mcp"
version = "1.0.0"
description = "MCP Server — Monitor competitor websites for price, product & promotion changes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.scripts]
competitor-monitor = "server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"